# aeson

./: aeson.cabal  encodetest.hs
Data/: Aeson.hs
Data/Aeson/: Encode.hs  Fixed.hs  Generic.hs  TH.hs
Data/Aeson/Fixed/: Encode.hs  Functions.hs  Generic.hs  Parser.hs  TH.hs  Types.hs
Data/Aeson/Fixed/Parser/: Internal.hs
Data/Aeson/Fixed/Types/: Class.hs  Generic.hs  Internal.hs
Data/Aeson/Parser/: Internal.hs
Data/Aeson/Types/: Class.hs  Generic.hs  Internal.hs
benchmarks/: AesonCompareAutoInstances.hs  AesonEncode.hs  AesonParse.hs  CompareWithJSON.hs  JsonParse  JsonParse_p  Makefile  aeson-benchmarks.cabal  compare.html
tests/: Properties.hs
